--- a/development/platformio.ini
+++ b/development/platformio.ini
@@ -14,4 +14,6 @@ board = genericSTM32F401CC
 framework = cmsis
 debug_tool = stlink
 upload_protocol = stlink
-build_flags = -I"inc" -Werror
+build_flags = -I"inc" 
+debug_svd_path = C:\Users\Yasmin\Desktop\ARM_stm32f401\st32f401\debug files_openOCD\STM32F401.svd
+;-Werror
